# article-pipeline

./: .gitattributes  .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md
app/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
app/alembic/: env.py
app/alembic/versions/: 0001_initial.py  0002_relevance.py  0003_embedding.py  0004_image.py  0005_feeds.py  0006_run_log.py  0007_scheduled_at.py  0008_app_settings.py  0009_channels.py  0010_collect_schedule.py  0011_next_collect.py  0012_collect_jobs.py  0013_collect_job_query.py  0014_article_review.py  0015_collect_job_progress.py
app/src/: __main__.py  bot_factory.py  config.py  log.py  media.py  pipeline.py  settings_store.py
app/src/admin/: app.py
app/src/channels/: service.py
app/src/collectors/: arxiv.py  base.py  habr.py  reddit.py  rss.py  sources.py  websearch.py
app/src/db/: base.py  models.py  repo.py
app/src/dedup/: semantic.py
app/src/feeds/: service.py
app/src/filter/: relevance.py  service.py
app/src/images/: search.py
app/src/llm/: client.py
app/src/moderation/: bot.py  keyboards.py  service.py
app/src/publisher/: queue.py  telegram.py
app/tests/: conftest.py  test_admin.py  test_arxiv.py  test_channels.py  test_collect_jobs.py  test_config.py  test_feeds.py  test_habr.py  test_images_search.py  test_moderation.py  test_pipeline.py  test_publisher.py  test_queue.py  test_reddit.py  test_relevance.py  test_repo.py  test_rewrite.py  test_rss.py  test_search.py  test_semantic.py  test_settings_store.py  test_sources.py  test_websearch.py
(+27 files in other folders)
